--- a/style.css
+++ b/style.css
@@ -11,5 +11,6 @@ height: 162px;
 #galho{ 
     width:163px ;
     height:163px ;
-    margin-right: auto;
+    padding-left:25% ;
+    padding-right:30% ;
 }
